Updating image folder

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div>
   <!--Create a div element with the center id to center the image-->
 <div id="center">
-<img src="profile.jpg" alt="Kristen smiling, sitting in a chair resting her face on her fist" class="picture" />
+<img src="images/profile.jpg" alt="Kristen smiling, sitting in a chair resting her face on her fist" class="picture" />
 </div>
 <!--New div element for the short introduction statement-->
 <div class="intro">
