--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <!--Standard head of HTML5 document-->
 <head>
 <meta charset="utf-8">
@@ -26,10 +26,11 @@
 <img src="images/profile.jpg" alt="Kristen smiling, sitting in a chair resting her face on her fist" class="picture" />
 </div>
 <!--New div element for the short introduction statement-->
-<div class="intro">
-<section>
+<div>
+<section class="intro">
 <h2>Hey! I'm Kristen.</h2>
-</div>
+  </section>
+  </div>
 <!--Is it frowned upon to have a second div element nested in a section if that section is part of a parent div?-->
 <div class="about-me">
 <p>Hailing from humble Plano, Texas, I am currently studying to be a software engineer with Thinkful. I love solving problems and am excited for the real-world applications of learning software development!</p>
@@ -43,8 +44,6 @@
     <li>HTML & CSS</li>
   </ol>
   <p>and I have many more exciting things coming up. I'm always in the market for new knowledge, a mentor, or another new-to-coding buddy! Please feel free to reach out to me through one of the links below.</p>
- 
-  </section>
 </div>
 
 <hr>
@@ -54,9 +53,9 @@
 <h3>contact me!</h3>
 <!--Unordered list-->
 <ul>
-<li><h4><a href="https://github.com/kristenoconnell" target_"blank">github</a></h4></li>
+<li><h4><a href="https://github.com/kristenoconnell" target="_blank">github</a></h4></li>
 <li><h4><a href="https://www.linkedin.com/in/kristen-o-connell-586328201/" target="_blank">linkedin</a></h4></li>
-<li><h4><a href="mailto:kleigh.oconnell@gmail.com">email</a></h4></li>
+<li><h4><a href="mailto:kleigh.oconnell@gmail.com" target="_blank">email</a></h4></li>
 </ul>
 </section>
 </div>
