updating to heading hierarchy

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--Start with a header with a subtitle and a sub-subtitle to describe the portfolio-->
 <header>
 <h1>Kristen O'Connell</h1>
-<h4>Software Engineer</h4>
+<p class="large">Software Engineer</p>
 <p>(in training)</p>
 </header> 
 
@@ -53,9 +53,9 @@
 <h3>contact me!</h3>
 <!--Unordered list-->
 <ul>
-<li><h4><a href="https://github.com/kristenoconnell" target="_blank">github</a></h4></li>
-<li><h4><a href="https://www.linkedin.com/in/kristen-o-connell-586328201/" target="_blank">linkedin</a></h4></li>
-<li><h4><a href="mailto:kleigh.oconnell@gmail.com" target="_blank">email</a></h4></li>
+<li><a href="https://github.com/kristenoconnell" target="_blank">github</a></li>
+<li><a href="https://www.linkedin.com/in/kristen-o-connell-586328201/" target="_blank">linkedin</a></li>
+<li><a href="mailto:kleigh.oconnell@gmail.com" target="_blank">email</a></li>
 </ul>
 </section>
 </div>
