--- a/index.html
+++ b/index.html
@@ -6,69 +6,107 @@
 <meta name="viewport" content="width=device-width">
 <title>Kristen O'Connell's Portfolio</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&family=Raleway&family=Roboto&display=swap" rel="stylesheet">
 <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
+  <body>
+   
+    <header>
+      <h1>KRISTEN O'CONNELL</h1>
+      <nav>
+        <ul id="navMenu">
+          <li><a href="#about">About</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    
+  <main>
+    
+    <section class="home" id="home">
+      <div class="group">
+      <div class="item">
+      <img src="/images/profile.jpg" alt="Kristen sitting in a chair, smiling" class="image" />
+     </div>
+      <div class="item home-text">
+      <h2>Hi! I'm Kristen.</h2>
+      <p>Service-industry extraordinaire turned aspiring web developer, I hail from the not-so-small town of Plano, Texas. I'm most interested in web applications that bring people and ideas together. Please feel free to explore my projects, learn more about me, or get in touch through my page!</p>
+      </div>
+      </div>
+    </section>
 
-<body>
-<!--Start with a header with a subtitle and a sub-subtitle to describe the portfolio-->
-<header>
-<h1>Kristen O'Connell</h1>
-<p class="large">Software Engineer</p>
-<p>(in training)</p>
-</header> 
-
-<main>
-  <!--Create a div element for the entire main element-->
-<div>
-  <!--Create a div element with the center id to center the image-->
-<div id="center">
-<img src="images/profile.jpg" alt="Kristen smiling, sitting in a chair resting her face on her fist" class="picture" />
-</div>
-<!--New div element for the short introduction statement-->
-<div>
-<section class="intro">
-<h2>Hey! I'm Kristen.</h2>
+  <section class="about" id="about">
+    <div class="about-title item"><h3>About Me</h3></div>
+    <div class="about-text item-double"><p>I went to college at the University of Denver and majored in Psychology. I love to read, study, and learn, and I find ,myself drawn to a wide variety of subjects. I've been a problem solver for as long as I can remember, and as any developer can attest - the feeling of solving a function you've been stuck on for way too much time is unmatched.</p>
+    <p>I love spending time outdoors, hiking mountains and watching sunsets in particular. I am a certified SCUBA diver and care deeply about environmental sustainability. I hope to build web applications that push the envelope, bring people together, and find ways to make the world a better place. </p></div>
   </section>
-  </div>
-<!--Is it frowned upon to have a second div element nested in a section if that section is part of a parent div?-->
-<div class="about-me">
-<p>Hailing from humble Plano, Texas, I am currently studying to be a software engineer with Thinkful. I love solving problems and am excited for the real-world applications of learning software development!</p>
 
-<p>After graduating from the University of Denver with a degree in Psychology, I spent several years exploring adulthood before I decided it was time for a career change. I've always loved figuring out the "why" behind how things work - turns out, that passion easily flows from learning how <i>humans</i> think into understanding how <i>computers</i> think. Outside of coding, I love practicing yoga, being outside, reading, and hanging out with my 3 year old lab.</p>
+  <section class="portfolio" id="portfolio">
+    <div class="portfolio-title item"><h3>Portfolio</h3></div>
+      <div class="portfolio-text">
+        <div class="group">
+          <div class="item">
+            <img src="/images/decode-project.jpg" alt="A colorful mix of legos" />
+            <h4><a href="https://github.com/kristenoconnell/decoder-ring-project" target="_blank">Decoder Ring Project</a></h4>
+            <p>This project entailed the creation of 3 complex decoding algorithms using Javascript: a caesar shift, a polybius square, and a substitution cipher. Each algorithm includes an encoding and decoding function and tested with Mocha + Chai.</p>
+          </div>
+          <div class="item">
+            <img src="/images/library-project.jpg" alt="A colorful stack of books in a library" />
+            <h4><a href="https://github.com/kristenoconnell/project-local-library" target="_blank">Local Library Project</a></h4>
+            <p>This project worked to create a navigable database for a local library. It involves several advanced Javascript functionalities, including reduce() and map(); embedding with template literals; and creating and accessing both arrays and objects of data.</p>
+          </div>
+      </div>
 
-<p>At Thinkful, I've just begun to dip my toes into:</p>
-<!-- Ordered list -->
-  <ol>
-    <li>JS</li>
-    <li>HTML & CSS</li>
-  </ol>
-  <p>and I have many more exciting things coming up. I'm always in the market for new knowledge, a mentor, or another new-to-coding buddy! Please feel free to reach out to me through one of the links below.</p>
-</div>
+      <div class="group">
+        <div class="item">
+          <img src="/images/pomodoro.jpg" alt="A bright red tomato with a hearty green stem" />
+          <h4><a href="#">Pomodoro Timer</a></h4>
+          <p>This project is still in progress. Check back soon!</p>
+        </div>
+        <div class="item">
+          <img src="/images/flashcards.jpg" alt="A stack of purple, green, blue, and pink flashcards" />
+          <h4><a href="#">Flashcard App</a></h4>
+          <p>This project is still in progress. Check back soon!</p>
+        </div>
+      </div>
+    </div>  
+  </section>
 
-<hr>
+  <section class="contact" id="contact">
+    <div class="contact-title item"><h3>Get in touch!</h3></div>
+    <div class="contact-form">
+      <form action="https://formspree.io/f/xyybvakl" method="post">
+      <label for="name">Name:</label>
+      <input id="name" type="text" name="senderName">
+      <label for="email">Email:</label>
+      <input id="email" type="text" name="senderEmail">
+      <label for="message">What would you like to chat about?</label>
+      <textarea id="message" name="senderMessage"> </textarea>
+      <button type="submit">send it!</button>
+      </form>
+    </div>
+  </section>
 
-<div class="contact">
-<section>
-<h3>contact me!</h3>
-<!--Unordered list-->
-<ul>
-<li><a href="https://github.com/kristenoconnell" target="_blank">github</a></li>
-<li><a href="https://www.linkedin.com/in/kristen-o-connell-586328201/" target="_blank">linkedin</a></li>
-<li><a href="mailto:kleigh.oconnell@gmail.com" target="_blank">email</a></li>
-</ul>
-</section>
-</div>
-</div>
-<!--Close the main div element after closing everything else-->
-</main>
 
-<footer>
-  <!--Small copyright symbol even though this is not exactly copyrighted-->
-<p>&#169; Kristen O'Connell</p>
-</footer>
+ 
+  </main>
+  </body>
+  <footer>
+    <div class="footer">
+      <div class="item">
+        <a href="https://www.linkedin.com/in/kristen-o-connell-586328201/" target="_blank">linkedin</a>
+      </div>
+      <div class="item">
+        <a href="https://github.com/kristenoconnell" target="_blank">github</a>
+      </div>
+      </div>
+    <p>&#169; Kristen O'Connell</p>
+  </footer>
 
-<!--Standard inclusion of javascript despite this webpage having no javascript code yet-->
-<script src="script.js"></script>
-</body>
+
+
+ 
 </html>
