Fixing image src
Github.io not displaying my images - trying to use the full src path to see if it fixes.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="home" id="home">
       <div class="group">
       <div class="item">
-      <img src="/images/profile.jpg" alt="Kristen sitting in a chair, smiling" class="image" />
+      <img src="https://github.com/kristenoconnell/portfolio/blob/main/images/profile.jpg" alt="Kristen sitting in a chair, smiling" class="image" />
      </div>
       <div class="item home-text">
       <h2>Hi! I'm Kristen.</h2>
@@ -49,12 +49,12 @@
       <div class="portfolio-text">
         <div class="group">
           <div class="item">
-            <img src="/images/decode-project.jpg" alt="A colorful mix of legos" />
+            <img src="https://github.com/kristenoconnell/portfolio/blob/main/images/decode-project.jpg" alt="A colorful mix of legos" />
             <h4><a href="https://github.com/kristenoconnell/decoder-ring-project" target="_blank">Decoder Ring Project</a></h4>
             <p>This project entailed the creation of 3 complex decoding algorithms using Javascript: a caesar shift, a polybius square, and a substitution cipher. Each algorithm includes an encoding and decoding function and tested with Mocha + Chai.</p>
           </div>
           <div class="item">
-            <img src="/images/library-project.jpg" alt="A colorful stack of books in a library" />
+            <img src="https://github.com/kristenoconnell/portfolio/blob/main/images/library-project.jpg" alt="A colorful stack of books in a library" />
             <h4><a href="https://github.com/kristenoconnell/project-local-library" target="_blank">Local Library Project</a></h4>
             <p>This project worked to create a navigable database for a local library. It involves several advanced Javascript functionalities, including reduce() and map(); embedding with template literals; and creating and accessing both arrays and objects of data.</p>
           </div>
@@ -62,12 +62,12 @@
 
       <div class="group">
         <div class="item">
-          <img src="/images/pomodoro.jpg" alt="A bright red tomato with a hearty green stem" />
+          <img src="https://github.com/kristenoconnell/portfolio/blob/main/images/pomodoro.jpg" alt="A bright red tomato with a hearty green stem" />
           <h4><a href="#">Pomodoro Timer</a></h4>
           <p>This project is still in progress. Check back soon!</p>
         </div>
         <div class="item">
-          <img src="/images/flashcards.jpg" alt="A stack of purple, green, blue, and pink flashcards" />
+          <img src="https://github.com/kristenoconnell/portfolio/blob/main/images/flashcards.jpg" alt="A stack of purple, green, blue, and pink flashcards" />
           <h4><a href="#">Flashcard App</a></h4>
           <p>This project is still in progress. Check back soon!</p>
         </div>
