decoder image update

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="portfolio-text">
         <div class="group">
           <div class="item">
-            <img src="images/decode-project.jpg" alt="A colorful mix of legos" />
+            <img src="./images/decode-project.jpg" alt="A colorful mix of legos" />
             <h4><a href="https://github.com/kristenoconnell/decoder-ring-project" target="_blank">Decoder Ring Project</a></h4>
             <p>This project entailed the creation of 3 complex decoding algorithms using Javascript: a caesar shift, a polybius square, and a substitution cipher. Each algorithm includes an encoding and decoding function and tested with Mocha + Chai.</p>
           </div>
